# UnrealBPInspect

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: maintainability-notes.md  sequence-regression-plan.md
samples/: Helm_BP.uasset
samples/ue_4.27/: BP_DecoderTest.uasset
samples/ue_5.3/: Helm_BP.uasset
samples/ue_5.5/: Helm_BP.uasset
skill/: README.md  SKILL.md
src/: binary.rs  enums.rs  ffield.rs  helpers.rs  lib.rs  main.rs  output_diff.rs  output_json.rs  output_summary.rs  output_text.rs  parser.rs  pin_hints_scope.rs  pins.rs  prop_query.rs  properties.rs  property_type.rs  resolve.rs  types.rs  update.rs
src/bytecode/: asset.rs  block_graph.rs  call_graph.rs  cfg.rs  decode.rs  doonce_wrap_synthesis.rs  dump_bridge.rs  expr.rs  flow.rs  format.rs  inline.rs  latch.rs  mod.rs  names.rs  opcodes.rs  partition.rs  pin_attribution.rs  pipeline.rs  readers.rs  resolve.rs  stmt.rs  structure.rs
src/bytecode/cfg/: build.rs  dom.rs  macro_region.rs  mod.rs  probe_tests.rs  reaching.rs  reducibility.rs  region.rs  region_linear.rs  region_tests.rs  stmt.rs  tests.rs
src/bytecode/decode/: block.rs  block_tests.rs  branch_tests.rs  cascade_decode.rs  cascade_decode_tests.rs  cross_event_inline.rs  cross_event_inline_tests.rs  ctx.rs  entry.rs  expr.rs  expr_decode.rs  funcs.rs  header.rs  helpers.rs  k2node_macro_audit.rs  loop_decode.rs  loop_decode_tests.rs  match_op.rs  mem_disk.rs  mod.rs  naked_if.rs  naked_if_tests.rs  orchestrate.rs  probe.rs  sequence.rs  switch_decode.rs  test_fixtures.rs  tests.rs  transform_stack.rs  types.rs  ubergraph_scan.rs  walker.rs  walker_tests.rs
src/bytecode/emit/: comments.rs  diff.rs  dump.rs  json.rs  mod.rs  scoped_ptr.rs  scoped_value.rs  sections.rs  summary.rs  summary_tests.rs
src/bytecode/flow/: emit.rs  latch_strip.rs  loops.rs  mod.rs  parsers.rs  reorder.rs  sequence.rs  tests.rs
src/bytecode/inline/: cleanup.rs  fold.rs  mod.rs  patterns.rs  temps.rs
src/output_summary/: call_graph.rs  comments.rs  edgraph.rs  filter.rs  format.rs  mod.rs  ubergraph.rs
src/pin_hints/: bytecode_map.rs  collect.rs  detect.rs  mod.rs  routing.rs  tests.rs  types.rs
tests/: bytecode_ir_roundtrip.rs  bytecode_ir_stmt_roundtrip.rs  decodertest_known_bugs.rs  extended.rs  integration.rs  v2_baseline.rs  v2_partition_helm.rs
tests/baseline-snapshots/: ue_4.27_BP_DecoderTest.txt  ue_4.27_Helm_BP.txt  ue_5.3_Helm_BP.txt  ue_5.5_Helm_BP.txt
tests/common/: helpers.rs  mod.rs  pattern.rs
tests/snapshots/: README.md  helm_json.txt  helm_summary.txt  helm_summary.txt.new  helm_text.txt
(+134 files in other folders)
