[package]
name = "unreal-bp-inspect"
version = "0.1.1"
edition = "2021"
description = "Extract readable structure and logic from Unreal Engine Blueprint .uasset files"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/MarcedForLife/UnrealBPInspect"
homepage = "https://github.com/MarcedForLife/UnrealBPInspect"
keywords = ["unreal-engine", "blueprint", "uasset", "gamedev", "parser"]
categories = ["command-line-utilities", "game-development", "parser-implementations"]
exclude = ["samples/*", ".github/*", "CLAUDE.md"]

[[bin]]
name = "bp-inspect"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1.0.149"
similar = "2"
ureq = { version = "3", features = ["json"] }
