[package]
name = "unreal-bp-inspect"
version = "1.0.0"
edition = "2021"
description = "Extract readable structure and logic from Unreal Engine Blueprint .uasset files"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/MarcedForLife/UnrealBPInspect"
homepage = "https://github.com/MarcedForLife/UnrealBPInspect"
keywords = ["unreal-engine", "blueprint", "uasset", "gamedev", "parser"]
categories = ["command-line-utilities", "game-development", "parser-implementations"]
exclude = ["samples/*", ".github/*", "CLAUDE.md"]

[[bin]]
name = "bp-inspect"
path = "src/main.rs"

[features]
# Opt-in tests that load the local-only private fixtures (the gitignored
# `.uasset` samples). Off by default so the published crate and CI build
# and test without them.
private-fixtures = []

[dependencies]
anyhow = "1"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
similar = "2"
ureq = { version = "3", features = ["json"] }
